# GBLink-Firmware

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf  west.yaml
.github/workflows/: build.yml
boards/: nucleo_f070rb.overlay  rpi_pico.overlay
dts/bindings/: raspberry,pico-link.yaml
src/: control.hpp  hardware.cpp  hardware.hpp  linkStatus.hpp  link_defines.h  main.c  main.cpp  persist.cpp  persist.hpp
src/callbacks/: CMakeLists.txt  TransiveStruct.hpp  blockCommand.c  blockCommand.cpp  blockCommand.h  blockCommandRequestCommand.cpp  blockCommandRequestCommand.hpp  blockRequestCommand.c  blockRequestCommand.h  commands.hpp  emptyCommand.c  emptyCommand.h  moveCommand.c  moveCommand.cpp  moveCommand.h  moveCommand.hpp  readyExitStandbyCommand.c  readyExitStandbyCommand.h  sendDummyCommand.cpp  sendDummyCommand.hpp  sendLinkTypeCommand.cpp  sendLinkTypeCommand.hpp  usbLinkCommand.cpp  usbLinkCommand.hpp
src/layers/: CMakeLists.txt  awPacketLayer.cpp  awPacketLayer.hpp  gbLinkLayer.c  linkLayer.c  linkLayer.h  linkLayer_pio.c  masterClock.hpp  packetLayer.cpp  packetLayer.hpp  usbLayer.cpp  usbLayer.hpp
src/link/: CMakeLists.txt  link.c  link.h  link_dma.c
src/module/: CMakeLists.txt  advanceWars.cpp  advanceWars.hpp  debug.hpp  emu.cpp  emu.hpp  gb.cpp  link.cpp  link.hpp
src/payloads/: CMakeLists.txt  linkPlayer.c  linkPlayer.cpp  linkPlayer.h  linkPlayer.hpp  mail.cpp  mail.hpp  pokemon.cpp  pokemon.hpp  trainerCard.c  trainerCard.h
src/pio_firmware/: pio_master_mode.pio  pio_slave_mode.pio
src/sections/: CMakeLists.txt  awProtocol.hpp  awProtocolSection.cpp  awProtocolSection.hpp  awSection.cpp  awSection.hpp  enterTraderoom.cpp  enterTraderoom.hpp  nextSectionState.hpp  section.hpp  sectionConnect.hpp  sections.hpp  tradeConnection.cpp  tradeConnection.hpp  tradeDisconnected.cpp  tradeDisconnected.hpp  tradeLounge.cpp  tradeLounge.hpp  tradeSetup.cpp  tradeSetup.hpp  usbLinkBridge.cpp  usbLinkBridge.hpp  usbSection.cpp  usbSection.hpp
tests/host/: Makefile  awProtocolTest  awProtocolTest.cpp
